Changed README to test ability to go back to tag.

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-README
+This project started as a class project for CSCI-4448/5448 Object Oriented 
+Analysis and Design during Spring 2011, taught by Prof. Ken Anderson, Dept. of 
+Computer Science, University of Colorado at Boulder.
